home page bug fix

--- a/index.html
+++ b/index.html
@@ -166,9 +166,13 @@
                         <p class="class">We more than just a provider of electricity services - we're pioneers in
                             the energy industry, dedicated to shaping a brighter, more sustainable future for all.
                         </p>
-                        <p><img src="image/check1.svg">&nbsp;Highlight the unique features or benefits</p>
-                        <p></p><img src="image/check1.svg">&nbsp;Highlight the unique features or benefits</p>
-                        <p></p><img src="image/check1.svg">&nbsp;Highlight the unique features or benefits</p>
+                        <div class="div_with_tick">
+                            <p><i class="fa fa-check" aria-hidden="true"></i> Established fact that a reader will be
+                                distracted.</p>
+                            <p><i class="fa fa-check" aria-hidden="true"></i> Established fact that a reader will be
+                                distracted.</p>
+                            <p><i class="fa fa-check" aria-hidden="true"></i> Trusted Electrical Services</p>
+                        </div>
                         <button type="button" class="button">About Us &nbsp;<i class=" fa fa-long-arrow-right"
                                 aria-hidden="true"></button></i>
 
@@ -188,58 +192,56 @@
                             From residential households to commercial enterprises, we provide reliable,
                             efficient, and sustainable energy solutions.
                         </p>
-                        <div class="row">
-                            <div class="col-lg-4 col-md-12">
-                                <div class="card-div">
-                                    <div class="card-img">
-                                        <img src="assets/employee working.jpg" alt="">
-
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-lg-4 col-md-6 card-main_container fade-in">
+                                    <div class="card-div">
+                                        <div class="card-img">
+                                            <img src="../../assets/employee working.jpg" alt="">
+                                        </div>
                                         <div class="card-number">
                                             01
                                         </div>
                                         <div class="card-content">
-                                            <p><b>Bright Spark Service</b></p>
-                                            <p>Explore Our range of service below & discover how you power your
-                                                life</p>
-                                            <a href="#" class="learn">Learn More<i class=" fa fa-long-arrow-right"
-                                                    aria-hidden="true"></a></i>
+                                            <p class="f24"><b>Bright Spark Service</b></p>
+                                            <p>Explore Our range of service below & discover how you power your life</p>
+                                            <a href="#">Learn More</a>
                                         </div>
                                     </div>
                                 </div>
-                            </div>
-                            <div class="col-lg-4 col-md-12">
-                                <div class="card-div">
-                                    <div class="card-img">
-                                        <img src="assets/employee working.jpg" alt="">
 
-                                        <div class="card-number"> 02</div>
+                                <div class="col-lg-4 col-md-6 card-main_container fade-in">
+                                    <div class="card-div">
+                                        <div class="card-img">
+                                            <img src="../../assets/employee working.jpg" alt="">
+                                        </div>
+                                        <div class="card-number">
+                                            02
+                                        </div>
                                         <div class="card-content">
-                                            <p><b>Bright Spark Service</b></p>
-                                            <p>Explore Our range of service below & discover how you power your
-                                                life</p>
-                                            <a href="#" class="learn">Learn More<i class="fa fa-long-arrow-right"
-                                                    aria-hidden="true"></a></i>
+                                            <p class="f24"><b>Energy Ease Packages</b></p>
+                                            <p>With cutting-edge technology & industry expertise, we empower</p>
+                                            <a href="#">Learn More</a>
                                         </div>
                                     </div>
                                 </div>
-                            </div>
-                            <div class="col-lg-4 col-md-12">
-                                <div class="card-div">
-                                    <div class="card-img">
-                                        <img src="assets/employee working.jpg" alt="">
 
-                                        <div class="card-number">3</div>
+                                <div class="col-lg-4 col-md-6 card-main_container fade-in">
+                                    <div class="card-div">
+                                        <div class="card-img">
+                                            <img src="../../assets/employee working.jpg" alt="">
+                                        </div>
+                                        <div class="card-number">
+                                            03
+                                        </div>
                                         <div class="card-content">
-                                            <p><b>Bright Spark Service</b></p>
-                                            <p>Explore Our range of service below & discover how you power your
-                                                life</p>
-                                            <a href="#" class="learn">Learn More<i class=" fa fa-long-arrow-right"
-                                                    aria-hidden="true"></a></i>
+                                            <p class="f24"><b>Electra Care Packages</b></p>
+                                            <p>Our team of experts is committed to delivering high-quality services</p>
+                                            <a href="#">Learn More</a>
                                         </div>
                                     </div>
                                 </div>
                             </div>
-
                         </div>
                     </div>
                 </div>
@@ -251,17 +253,20 @@
                 <div class="container">
                     <div class="row">
                         <div class="work col-lg-5 col-md-5">
-                            <p class="paragraph">How It Work</p>
+                            <!-- <p class="paragraph">How It Work</p> -->
+                            <div class="d-flex justify-content-center">
+                                <p class=" paragraph text-center">How It Work</p>
+                            </div>
                             <h3>How to Work Our Electricity Service</h3>
                             <p class="paragraph1">Throughout the process, transparency & communication, keeping you
                                 informed.</p>
-                            <button type="button" class="bt"><img src="image/work1.svg"> &nbsp; Power Path Unveiling
+                            <button type="button" class="bt"><img src="assets/work1.svg"> &nbsp; Power Path Unveiling
                                 Our Process</button>
-                            <button type="button" class="bt"><img src="image/work2.svg">&nbsp; Power Path Unveiling
+                            <button type="button" class="bt"><img src="assets/work2.svg">&nbsp; Power Path Unveiling
                                 Our Process</img></button>
-                            <button type="button" class="bt"><img src="image/work3.svg">&nbsp; Power Path Unveiling
+                            <button type="button" class="bt"><img src="assets/work3.svg">&nbsp; Power Path Unveiling
                                 Our Process</img></button>
-                            <button type="button" class="bt"><img src="image/work4.svg">&nbsp; Power Path Unveiling
+                            <button type="button" class="bt"><img src="assets/work4.svg">&nbsp; Power Path Unveiling
                                 Our Process</img></button>
                         </div>
                         <div class="col-lg-7 col-md-5">
@@ -293,7 +298,7 @@
                         From residential households to commercial enterprises, we provide
                         reliable, efficient, and sustainable energy solutions.</p>
                     <div class="row">
-                        <div class="col-lg-3  col-md-12">
+                        <div class="col-lg-3 text-center col-md-12">
                             <div class="img">
                                 <img src="https://cdn.pixabay.com/photo/2023/12/04/06/14/ai-generated-8428762_1280.jpg"
                                     width="300px" height="300px">
@@ -301,13 +306,13 @@
                                 <p class="text-center">Sales Manager</p>
                             </div>
                         </div>
-                        <div class="col-lg-3 col-md-12">
+                        <div class="col-lg-3 text-center col-md-12">
                             <img src="https://cdn.pixabay.com/photo/2023/12/04/06/14/ai-generated-8428762_1280.jpg"
                                 width="300px" height="300px">
                             <h3 class="text-center">Shoaib Bashir</h3>
                             <p class="text-center">Sales Manager</p>
                         </div>
-                        <div class="col-lg-3 col-md-12">
+                        <div class="col-lg-3 text-center col-md-12">
                             <div class="img">
                                 <img src="https://cdn.pixabay.com/photo/2023/12/04/06/14/ai-generated-8428762_1280.jpg"
                                     width="300px" height="300px">
@@ -315,7 +320,7 @@
                                 <p class="text-center">Sales Manager</p>
                             </div>
                         </div>
-                        <div class="col-lg-3 col-md-12">
+                        <div class="col-lg-3 text-center col-md-12">
                             <div class="img">
                                 <img src="https://cdn.pixabay.com/photo/2023/12/04/06/14/ai-generated-8428762_1280.jpg"
                                     width="300px" height="300px">
@@ -348,71 +353,60 @@
                     <!-- Our Blog -->
                     <div class="ourblog_class">
                         <div class="ourblog_container">
-                            <div class="paragraph text-center">Our Blog</div>
+                            <div class="text-center d-flex justify-content-center">
+                                <p class="paragraph">Our Blog</p>
+                            </div>
                             <h3 class="text-center">Electricity News & Updates</h3>
                             <p class="class text-center">From residential households to commercial enterprises, we
                                 provide reliable, efficient, and sustainable energy solutions.</p>
 
                         </div>
-                        <div class="row">
-                            <div class="card-main_container col-lg-4 col-md-6 fade-in">
-                                <div class="card-div">
-                                    <div class="card-img">
-                                        <img src="assets/employee working.jpg" alt="">
-
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-lg-4 col-md-6 card-main_container fade-in">
+                                    <div class="card-div">
+                                        <div class="card-img">
+                                            <img src="../../assets/employee working.jpg" alt="">
+                                        </div>
                                         <div class="card-number">
                                             01
                                         </div>
                                         <div class="card-content">
-                                            <p class="class"><i class="fa fa-calendar-check-o" aria-hidden="true">April
-                                                    2,2025</i></p>
-                                            <p class="class"><i class="fa fa-location-arrow"
-                                                    aria-hidden="true">Electricity Corner</i></p>
-                                            <p>Are you considering studying abroad and embarking on an visa to</p>
-                                            <a href="#" class="learn">Learn More<i class="fa fa-long-arrow-right"
-                                                    aria-hidden="true"></i></a>
+                                            <p class="f24"><b>Bright Spark Service</b></p>
+                                            <p>Explore Our range of service below & discover how you power your life</p>
+                                            <a href="#">Learn More</a>
                                         </div>
                                     </div>
                                 </div>
-                            </div>
 
-                            <div class="card-main_container col-lg-4 col-md-6 fade-in">
-                                <div class="card-div">
-                                    <div class="card-img">
-                                        <img src="assets/employee working.jpg" alt="">
-
+                                <div class="col-lg-4 col-md-6 card-main_container fade-in">
+                                    <div class="card-div">
+                                        <div class="card-img">
+                                            <img src="../../assets/employee working.jpg" alt="">
+                                        </div>
                                         <div class="card-number">
                                             02
                                         </div>
                                         <div class="card-content">
-                                            <p><b>Bright Spark Service</b></p>
-                                            <p class="class"><i class="fa fa-location-arrow"
-                                                    aria-hidden="true">Electricity Corner</i></p>
-                                            <p>From understanding our pricing plans to learning about our renewable
-                                            </p>
-                                            <a href="#" class="learn">Learn More<i class="fa fa-long-arrow-right"
-                                                    aria-hidden="true"></i></a>
+                                            <p class="f24"><b>Energy Ease Packages</b></p>
+                                            <p>With cutting-edge technology & industry expertise, we empower</p>
+                                            <a href="#">Learn More</a>
                                         </div>
                                     </div>
                                 </div>
-                            </div>
 
-                            <div class="card-main_container col-lg-4 col-md-6 fade-in">
-                                <div class="card-div">
-                                    <div class="card-img">
-                                        <img src="assets/employee working.jpg" alt="">
-
+                                <div class="col-lg-4 col-md-6 card-main_container fade-in">
+                                    <div class="card-div">
+                                        <div class="card-img">
+                                            <img src="../../assets/employee working.jpg" alt="">
+                                        </div>
                                         <div class="card-number">
                                             03
                                         </div>
                                         <div class="card-content">
-                                            <p><b>Bright Spark Service</b></p>
-                                            <p class="class"><i class="fa fa-location-arrow"
-                                                    aria-hidden="true">Electricity Corner</i></p>
-                                            <p>We're committed to ensuring that you have all the information you
-                                                need.</p>
-                                            <a href="#" class="learn">Learn More<i class="fa fa-long-arrow-right"
-                                                    aria-hidden="true"></i></a>
+                                            <p class="f24"><b>Electra Care Packages</b></p>
+                                            <p>Our team of experts is committed to delivering high-quality services</p>
+                                            <a href="#">Learn More</a>
                                         </div>
                                     </div>
                                 </div>
