--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                                 <div class="col-lg-4 col-md-6 card-main_container fade-in">
                                     <div class="card-div">
                                         <div class="card-img">
-                                            <img src="../../assets/employee working.jpg" alt="">
+                                            <img src="assets/employee working.jpg" alt="">
                                         </div>
                                         <div class="card-number">
                                             01
@@ -213,7 +213,7 @@
                                 <div class="col-lg-4 col-md-6 card-main_container fade-in">
                                     <div class="card-div">
                                         <div class="card-img">
-                                            <img src="../../assets/employee working.jpg" alt="">
+                                            <img src="assets/employee working.jpg" alt="">
                                         </div>
                                         <div class="card-number">
                                             02
@@ -229,7 +229,7 @@
                                 <div class="col-lg-4 col-md-6 card-main_container fade-in">
                                     <div class="card-div">
                                         <div class="card-img">
-                                            <img src="../../assets/employee working.jpg" alt="">
+                                            <img src="assets/employee working.jpg" alt="">
                                         </div>
                                         <div class="card-number">
                                             03
