--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
                                 <div class="col-lg-4 col-md-6 card-main_container fade-in">
                                     <div class="card-div">
                                         <div class="card-img">
-                                            <img src="../../assets/employee working.jpg" alt="">
+                                            <img src="assets/employee working.jpg" alt="">
                                         </div>
                                         <div class="card-number">
                                             01
@@ -382,7 +382,7 @@
                                 <div class="col-lg-4 col-md-6 card-main_container fade-in">
                                     <div class="card-div">
                                         <div class="card-img">
-                                            <img src="../../assets/employee working.jpg" alt="">
+                                            <img src="assets/employee working.jpg" alt="">
                                         </div>
                                         <div class="card-number">
                                             02
@@ -398,7 +398,7 @@
                                 <div class="col-lg-4 col-md-6 card-main_container fade-in">
                                     <div class="card-div">
                                         <div class="card-img">
-                                            <img src="../../assets/employee working.jpg" alt="">
+                                            <img src="assets/employee working.jpg" alt="">
                                         </div>
                                         <div class="card-number">
                                             03
